<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.harry.zehyrusproject.ArahAngin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/resize"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_arah_angin" />

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="363dp"
        android:layout_marginTop="70dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/labely_arah_angin"/>
        <com.jjoe64.graphview.GraphView
            android:layout_width="wrap_content"
            android:layout_height="303dp"
            android:id="@+id/graph_arah_angin" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/labelx"/>
    </TableLayout>

    <android.support.v7.widget.CardView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_title"
            android:text="@string/arah_angin"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:id="@+id/number"
            android:textColor="@color/colorPrimary"/>

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
